--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-This site is under construction
+<meta http-equiv="refresh" content="0; url=https://amitkulkarnis.gitlab.io/web/" />
+<p><a href="https://amitkulkarnis.gitlab.io/web/">Redirect</a></p>
